Fix T89122: crash when multi input is connected to multiple group inputs

The early `return` was wrong when there are multiple origin sockets
that need to be loaded.